--- a/main.html
+++ b/main.html
@@ -11,9 +11,9 @@
 	<header>
 		<nav>
 			<ul>
-				<li><a href="">Home</a></li>
-				<li><a href="">About us</a></li>
-				<li><a href="">Contact us</a></li>
+				<li><a href="https://en.wikipedia.org/wiki/Home">Home</a></li>
+				<li><a href="https://www.searchenginejournal.com/about-us-page-examples/250967/">About us</a></li>
+				<li><a href="https://www.searchenginejournal.com/examples-contact-us-pages/378518/">Contact us</a></li>
 			</ul>
 		</nav>
 	</header>
