changed img address

--- a/main.html
+++ b/main.html
@@ -1,31 +1,37 @@
 <!DOCTYPE html>
 
 <html>
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<!-- the entire body must be written by student -->
-	<header>
-		<nav>
-			<ul>
-				<li><a href="https://en.wikipedia.org/wiki/Home">Home</a></li>
-				<li><a href="https://www.searchenginejournal.com/about-us-page-examples/250967/">About us</a></li>
-				<li><a href="https://www.searchenginejournal.com/examples-contact-us-pages/378518/">Contact us</a></li>
-			</ul>
-		</nav>
-	</header>
-	<main>
-		<h1>3 random images</h1>
-		<img src="https://fastly.picsum.photos/id/123/200/300.jpg?hmac=uMA4z26tAYQnhW8_XlH0SoULB5z9s8tan-WCDkzbdMs" alt="rock surface"/>
-        <img src="https://fastly.picsum.photos/id/124/200/300.jpg?hmac=nYVSpzq7GaVkXrTk1whDiPbZdNRgtpJJXZJjvmUtFp0" alt="boat in sea"/>
-		<img src="https://fastly.picsum.photos/id/125/200/300.jpg?hmac=yLvRBwUcr6LYWuGaGk05UjiU5vArBo3Idr3ap5tpSxU" alt="hill"/>
-</main>
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
+  <body>
+    <!-- the entire body must be written by student -->
+    <header>
+      <nav>
+        <ul>
+          <li><a href="https://en.wikipedia.org/wiki/Home">Home</a></li>
+          <li>
+            <a
+              href="https://www.searchenginejournal.com/about-us-page-examples/250967/"
+              >About us</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.searchenginejournal.com/examples-contact-us-pages/378518/"
+              >Contact us</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <h1>3 random images</h1>
+      <img src="https://picsum.photos/id/123/200/300" alt="rock surface" />
+      <img src="https://picsum.photos/id/124/200/300" alt="boat in sea" />
+      <img src="https://picsum.photos/id/125/200/300" alt="hill" />
+    </main>
+    <script type="text/javascript" src="./script.js"></script>
+  </body>
 </html>
